# minuteman

./: .babelrc  .gitignore  .travis.yml  Cargo.toml  Makefile  README.md  package-lock.json  package.json  tsconfig.json  webpack.common.js  webpack.prod.js
.ci/: before_deploy.sh
docs/: gce.md
scripts/: install-coordinator.sh  install-worker.sh
src/: coordinator.rs  main.rs  messages.rs  static_assets.rs  stats.rs  webserver.rs  worker.rs
systemd/: minuteman-coordinator.service  minuteman-worker.defaults  minuteman-worker.service
webapp/: api.js  app.css  index.html  index.js  index.ts
webapp/components/: Controls.css  Controls.jsx  SpecEditor.css  SpecEditor.jsx  SpecEntry.css  SpecEntry.jsx  SpecList.css  SpecList.jsx  WorkerTable.css  WorkerTable.jsx
webapp/static/: modern-normalize.min.css
