[package]
name = "minuteman"
version = "0.1.0"
authors = ["Benn Sundsrud <benn.sundsrud@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.4.0", features = ["unstable"] }
async-tungstenite = { version = "0.3.1", features = ["async-std-runtime"] }
slog = { version = "2.5.2", features = ["max_level_trace", "release_max_level_info"] }
slog-async = "2.3.0"
slog-term = "2.4.2"
anyhow = "1.0.26"
futures = "0.3.1"
tungstenite = "0.9.2"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
url = "2.1.1"
tide = {version = "0.5.1", default-features=true}
surf = "1.0.3"
rand = "0.7.3"
