[package]
name = "minuteman"
version = "0.1.4"
authors = ["Benn Sundsrud <benn.sundsrud@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-tungstenite = { version = "0.3.1", features = ["tokio-runtime"] }
slog = { version = "2.5.2", features = ["max_level_trace", "release_max_level_info"] }
slog-async = "2.3.0"
slog-term = "2.4.2"
anyhow = "1.0.26"
futures = "0.3.1"
tungstenite = { version = "0.9.2", default-features = false }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
rand = "0.7.3"
tokio = { version = "0.2.11", features = ["rt-threaded", "tcp", "sync", "time", "stream", "fs"] }
hyper = "0.13.1"
url = "2.1.1"
hyper-rustls = "0.19.1"
warp = { version = "0.2.0", default-features = false }
futures-intrusive = "0.2.2"
urlencoding = "1.0.0"
mime_guess = "2.0.1"
headers = "0.3.1"
hostname = "0.3.0"
hdrhistogram = "7.0.0"
