[package]
name = "minuteman"
version = "0.3.0"
authors = ["Benn Sundsrud <benn.sundsrud@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-tungstenite = { version = "0.13.0", features = ["tokio-runtime"] }
slog = { version = "2.7.0", features = ["max_level_trace", "release_max_level_info"] }
slog-async = "2.6.0"
slog-term = "2.8.0"
anyhow = "1.0.38"
futures = "0.3.13"
tungstenite = { version = "0.13.0", default-features = false }
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
rand = "0.8.3"
tokio = { version = "1.8.4", features = ["full"] }
hyper = "0.14.4"
url = "2.2.1"
hyper-rustls = "0.22.1"
warp = { version = "0.3.0", default-features = false }
futures-intrusive = "0.4.0"
urlencoding = "1.1.1"
mime_guess = "2.0.3"
headers = "0.3.3"
hostname = "0.3.1"
hdrhistogram = "7.2.0"
tokio-stream = { version = "0.1.3", features = [ "sync" ] }
uuid = { version = "0.8.2", features = ["v4"] }
